changed top servers in restaurant admin to last 30 days

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -23,7 +23,7 @@
         <div class="col-md-4">
             <div class="panel panel-green">
                 <div class="panel-heading">
-                    <h4>Top Servers by Sales</h4>
+                    <h4>Top Servers by Sales Last 30 Days</h4>
                     {% for server in best_servers %}
                     <span class="pull-left">{{ server.0.user }} - ${{ server.1 }}</span>
                     <span class="glyphicon glyphicon-glass pull-right"></span><br>
