added $ notation to sales chart. ran migration to set default menu status as active

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -110,7 +110,7 @@ $( document ).ready(function(){
 
     xkey: 'day',
     ykeys: ['N', 'A', 'E', 'D', 'B'],
-    labels: ['Non-Alcoholic Beverages', 'Appetizers', 'Entrees', 'Desserts', 'Alcoholic Beverages'],
+    labels: ['Non-Alcoholic Beverages $', 'Appetizers $', 'Entrees $', 'Desserts $', 'Alcoholic Beverages $'],
     xLabels: ['month'],
     hoverCallback: function (index, options, content, row) {
       var data = options.data[index];
